--- a/.github/workflows/setup-test-k8s-access.yml
+++ b/.github/workflows/setup-test-k8s-access.yml
@@ -15,6 +15,19 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
+    # Install kubectl if not present
+    - name: Install kubectl
+      run: |
+        if ! command -v kubectl &> /dev/null; then
+          echo "kubectl not found, installing..."
+          curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+          chmod +x kubectl
+          sudo mv kubectl /usr/local/bin/
+        else
+          echo "kubectl already installed."
+        fi
+        kubectl version --client --short
+
     # Set up kubeconfig
     - name: Set up kubeconfig
       env:
