--- a/.github/workflows/setup-test-k8s-access.yml
+++ b/.github/workflows/setup-test-k8s-access.yml
@@ -22,7 +22,7 @@ jobs:
           echo "kubectl not found, installing..."
           curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
           chmod +x kubectl
-          sudo mv kubectl /usr/local/bin/
+          mv kubectl /usr/local/bin/
         else
           echo "kubectl already installed."
         fi
