--- a/apps/nautobot/test/values-test.yml
+++ b/apps/nautobot/test/values-test.yml
@@ -28,3 +28,8 @@ redis:
       size: "1Gi"
       storageClass: "rook-cephfs"
       accessModes: ['ReadWriteOnce']
+  auth:
+    # -- [[ref](https://github.com/bitnami/charts/tree/master/bitnami/redis#redis-common-configuration-parameters)] Enable password authentication
+    enabled: true
+    # -- [[ref](https://github.com/bitnami/charts/tree/master/bitnami/redis#redis-common-configuration-parameters)] Redis password
+    password: "nautobot-redis-pass"
