--- a/apps/nautobot/test/values-test.yml
+++ b/apps/nautobot/test/values-test.yml
@@ -20,6 +20,9 @@ postgresql:
       size: "5Gi"
       storageClass: "rook-cephfs"
       accessModes: ['ReadWriteOnce']
+  auth:
+    # -- [[ref](https://github.com/bitnami/charts/tree/master/bitnami/redis#redis-common-configuration-parameters)] Enable password authentication
+    password: "nautobot-postgres-pass"
 
 redis:
   master:
