--- a/apps/nautobot/test/values-test.yml
+++ b/apps/nautobot/test/values-test.yml
@@ -13,18 +13,18 @@ service:
     https:  31443
     # -- (int) Node port for Nautobot uwsgimetrics choose port in Kubernetes `--service-node-port-range` typically 30000-32767
 
-nautobot:
-  db:
-    # -- Name of existing secret to use for Database passwords<sup>[1](#notes)</sup>
-    existingSecret: "nautobot-test-secrets"
-    # -- Password key to be retrieved from existing secret<sup>[1](#notes)</sup>
-    existingSecretPasswordKey: "password"
+# nautobot:
+#   db:
+#     # -- Name of existing secret to use for Database passwords<sup>[1](#notes)</sup>
+#     existingSecret: "nautobot-test-secrets"
+#     # -- Password key to be retrieved from existing secret<sup>[1](#notes)</sup>
+#     existingSecretPasswordKey: "password"
   
-  redis:
-    # -- Name of existing secret to use for Redis passwords<sup>[1](#notes)</sup>
-    existingSecret: "nautobot-test-secrets"
-    # -- Password key to be retrieved from existing secret<sup>[1](#notes)</sup>
-    existingSecretPasswordKey: "redis-password"
+#   redis:
+#     # -- Name of existing secret to use for Redis passwords<sup>[1](#notes)</sup>
+#     existingSecret: "nautobot-test-secrets"
+#     # -- Password key to be retrieved from existing secret<sup>[1](#notes)</sup>
+#     existingSecretPasswordKey: "redis-password"
 
 postgresql:
   primary:
