--- a/apps/nautobot/test/values-test.yml
+++ b/apps/nautobot/test/values-test.yml
@@ -13,7 +13,8 @@ service:
     https:  31443
     # -- (int) Node port for Nautobot uwsgimetrics choose port in Kubernetes `--service-node-port-range` typically 30000-32767
 
-# nautobot:
+nautobot:
+  extraEnvVarsSecret: ["nautobot-test-secrets"]
 #   db:
 #     # -- Name of existing secret to use for Database passwords<sup>[1](#notes)</sup>
 #     existingSecret: "nautobot-test-secrets"
