--- a/apps/nautobot/overlays/test/kustomization.yml
+++ b/apps/nautobot/overlays/test/kustomization.yml
@@ -1,6 +1,8 @@
 resources:
   - ../../base
 
-patchesStrategicMerge:
+resources:
   - external-secrets.yml
   - values.yml
+
+#patchesStrategicMerge:
