--- a/clusters/PROD/hosts.yaml
+++ b/clusters/PROD/hosts.yaml
@@ -8,6 +8,10 @@ all:
       ansible_host: 192.168.101.158
       ip: 192.168.101.158
       access_ip: 192.168.101.158
+    # rocky9-prod-node3:
+    #   ansible_host: 192.168.101.159
+    #   ip: 192.168.101.159
+    #   access_ip: 192.168.101.159
       
   children:
     kube_control_plane:
