--- a/clusters/PROD/hosts.yml
+++ b/clusters/PROD/hosts.yml
@@ -8,7 +8,7 @@ all:
       ansible_host: 192.168.101.158
       ip: 192.168.101.158
       access_ip: 192.168.101.158
-    # rocky9-prod-node3:
+    ### rocky9-prod-node3:
     #   ansible_host: 192.168.101.159
     #   ip: 192.168.101.159
     #   access_ip: 192.168.101.159
