--- a/.github/workflows/run-kubespray.yml
+++ b/.github/workflows/run-kubespray.yml
@@ -83,7 +83,7 @@ jobs:
         run: |
           source venv/bin/activate
           ansible-playbook -i inventory/${CHANGED_CLUSTER}/hosts.yml cluster.yml \
-            --become -e "ansible_password=${{ secrets.SSH_PASS }}"
+            --become --become-user=root -e "ansible_password=${{ secrets.SSH_PASS }}" -e "ansible_become_pass=${{ secrets.SSH_PASS }}"
 
   #install-argocd:
     #uses: .github/workflows/install-argocd.yml  # Path to the reusable workflow
