--- a/.github/workflows/lab-setup-test-k8s-access.yml
+++ b/.github/workflows/lab-setup-test-k8s-access.yml
@@ -34,7 +34,7 @@ jobs:
         KUBECONFIG_PATH: /home/jeff/.kube/config
       run: |
         mkdir -p $(dirname $KUBECONFIG_PATH)
-        echo ${{ secrets.KUBECONFIG_BASE64_LAB }} | base64 --decode > $KUBECONFIG_PATH
+        echo ${{ secrets.KUBECONFIG_BASE64_PROD }} | base64 --decode > $KUBECONFIG_PATH
         chmod 600 $KUBECONFIG_PATH
 
     # Verify kubectl is installed and cluster access
