--- a/.github/workflows/install-argocd.yml
+++ b/.github/workflows/install-argocd.yml
@@ -24,6 +24,7 @@ jobs:
     # Install Argo CD CLI
     - name: Install Argo CD CLI
       run: |
+        sudo rm -rf argocd
         curl -sSL -o argocd https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-amd64
         chmod +x argocd
         sudo mv argocd /usr/local/bin/
