--- a/.github/workflows/run-kubespray.yml
+++ b/.github/workflows/run-kubespray.yml
@@ -43,11 +43,11 @@ jobs:
           echo "CHANGED_CLUSTER=$CHANGED_CLUSTER" >> $GITHUB_ENV
 
       # Use YAML Lint Action
-      - name: Run YAML Lint Action
-        uses: github/super-linter@v5
-        with:
-          file_extensions: "yml,yaml"
-          validate_yaml: true
+      # - name: Run YAML Lint Action
+      #   uses: github/super-linter@v5
+      #   with:
+      #     file_extensions: "yml,yaml"
+      #     validate_yaml: true
 
       # Step 3: Run the Kubernetes-specific tasks
       - name: Run tasks for changed cluster
