--- a/snapshots/snapshot-restore-vars.yml
+++ b/snapshots/snapshot-restore-vars.yml
@@ -13,8 +13,8 @@ snapshot_restore_list:
   #     - vm_disk_to_restore: vdisk1.img
   #       vm_disk_directory: /mnt/nvme_cache/domains
   #       snapshot_to_restore_from: baseline_kubernetes
-  - vm_name: Rocky9-LabNode3
-    disks_to_restore:
-      - vm_disk_to_restore: vdisk1.img
-        vm_disk_directory: /mnt/nvme_cache/domains
-        snapshot_to_restore_from: baseline_kubernetes
+  # - vm_name: Rocky9-LabNode3
+  #   disks_to_restore:
+  #     - vm_disk_to_restore: vdisk1.img
+  #       vm_disk_directory: /mnt/nvme_cache/domains
+  #       snapshot_to_restore_from: baseline_kubernetes
