--- a/.github/workflows/install-argocd.yml
+++ b/.github/workflows/install-argocd.yml
@@ -40,17 +40,17 @@ jobs:
         kubectl patch svc argocd-server -n argocd \
           -p '{"spec": {"type": "NodePort", "ports": [{"port": 443, "targetPort": 8080, "nodePort": ${{ vars.ARGOCD_PORT_LAB }} }]}}'
 
-    # # Log in to ArgoCD
-    # - name: Login to ArgoCD
-    #   env:
-    #     ARGOCD_SERVER: ${{ vars.ARGOCD_URL_LAB }}
-    #     ARGOCD_USERNAME: ${{ secrets.ARGOCD_ADMIN_USER }}
-    #     ARGOCD_PASSWORD: ${{ secrets.ARGOCD_ADMIN_PASSWORD_LAB }}
-    #   run: |
-    #     argocd login $ARGOCD_SERVER \
-    #       --username $ARGOCD_USERNAME \
-    #       --password $ARGOCD_PASSWORD \
-    #       --insecure
+    # Log in to ArgoCD
+    - name: Login to ArgoCD
+      env:
+        ARGOCD_SERVER: ${{ vars.ARGOCD_URL_LAB }}
+        ARGOCD_USERNAME: ${{ secrets.ARGOCD_ADMIN_USER }}
+        ARGOCD_PASSWORD: ${{ secrets.ARGOCD_ADMIN_PASSWORD_LAB }}
+      run: |
+        argocd login $ARGOCD_SERVER \
+          --username $ARGOCD_USERNAME \
+          --password $ARGOCD_PASSWORD \
+          --insecure
 
     # # Create Additional Admin User ConfigMap
     # - name: Create Admin User ConfigMap
