--- a/.github/workflows/install-argocd.yml
+++ b/.github/workflows/install-argocd.yml
@@ -68,6 +68,9 @@ jobs:
         metadata:
           name: argocd-cm
           namespace: argocd
+          labels:
+            app.kubernetes.io/name: argocd-cm
+            app.kubernetes.io/part-of: argocd
         data:
           accounts.$ADMIN_USERNAME: login
         " > argocd-cm.yaml
