--- a/.github/workflows/install-argocd.yml
+++ b/.github/workflows/install-argocd.yml
@@ -129,10 +129,10 @@ jobs:
         CLUSTER_NAME=lab-cluster
         CONTEXT=$(kubectl config current-context)
         EXISTS=$(argocd cluster get $CLUSTER_NAME || echo "not found")
-        if [[ "$EXISTS" == "not found" ]]; then
-          echo "Cluster $CLUSTER_NAME not found. Adding it..."
-          # echo $KUBECONFIG | base64 --decode > kubeconfig.yaml
-          # argocd cluster add $CONTEXT --name $CLUSTER_NAME --kubeconfig kubeconfig.yaml
-        else
-          echo "Cluster $CLUSTER_NAME already exists."
-        fi
+        # if [[ "$EXISTS" == "not found" ]]; then
+        #   echo "Cluster $CLUSTER_NAME not found. Adding it..."
+        #   echo $KUBECONFIG | base64 --decode > kubeconfig.yaml
+        #   argocd cluster add $CONTEXT --name $CLUSTER_NAME --kubeconfig kubeconfig.yaml
+        # else
+        #   echo "Cluster $CLUSTER_NAME already exists."
+        # fi
