--- a/.github/workflows/install-argocd.yml
+++ b/.github/workflows/install-argocd.yml
@@ -123,16 +123,13 @@ jobs:
 
     # Add the cluster to ArgoCD if not exists
     - name: Add Cluster to ArgoCD
-      # env:
-      #   KUBECONFIG: ${{ secrets.KUBECONFIG_BASE64_LAB }}
       run: |
         CLUSTER_NAME=lab-cluster
         CONTEXT=$(kubectl config current-context)
         EXISTS=$(argocd cluster get $CLUSTER_NAME || echo "not found")
-        # if [[ "$EXISTS" == "not found" ]]; then
-        #   echo "Cluster $CLUSTER_NAME not found. Adding it..."
-        #   echo $KUBECONFIG | base64 --decode > kubeconfig.yaml
-        #   argocd cluster add $CONTEXT --name $CLUSTER_NAME --kubeconfig kubeconfig.yaml
-        # else
-        #   echo "Cluster $CLUSTER_NAME already exists."
-        # fi
+        if [[ "$EXISTS" == "not found" ]]; then
+          echo "Cluster $CLUSTER_NAME not found. Adding it...
+          argocd cluster add $CONTEXT --name $CLUSTER_NAME --yes
+        else
+          echo "Cluster $CLUSTER_NAME already exists."
+        fi
