--- a/.github/workflows/install-argocd.yml
+++ b/.github/workflows/install-argocd.yml
@@ -127,6 +127,8 @@ jobs:
         CLUSTER_NAME=lab-cluster
         CONTEXT=$(kubectl config current-context)
         EXISTS=$(argocd cluster get $CLUSTER_NAME || echo "not found")
+        echo $CONTEXT
+        echo $EXISTS
         if [[ "$EXISTS" == "not found" ]]; then
           echo "Cluster $CLUSTER_NAME not found. Adding it...
           argocd login ${{ vars.ARGOCD_URL_LAB }} \
