--- a/.github/workflows/install-argocd.yml
+++ b/.github/workflows/install-argocd.yml
@@ -11,6 +11,7 @@ env:
 
 jobs:
   install-argocd:
+    environment: LAB
     runs-on: self-hosted
 
     steps:
@@ -21,7 +22,7 @@ jobs:
     # Set Correct Kubernetes Context
     - name: Set Correct Kubernetes Context
       run: |
-        kubectl config use-context $TARGETED_CLUSTER-kubernetes-admin@$TARGETED_CLUSTER-cluster.jjland.local
+        kubectl config use-context ${{ github.environment }}-kubernetes-admin@${{ github.environment }}-cluster.jjland.local
 
     # Install Argo CD
     - name: Install Argo CD on Kubernetes
