--- a/.github/workflows/install-argocd.yml
+++ b/.github/workflows/install-argocd.yml
@@ -19,14 +19,24 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    - name: Debug Environment
-      run: | 
-        echo "Environment: ${{ env }}"
+    - name: Determine Environment
+      id: detect_env
+      run: |
+        if git diff --name-only HEAD~1 | grep '^lab/'; then
+          echo "env_name=lab" >> $GITHUB_ENV
+        elif git diff --name-only HEAD~1 | grep '^prod/'; then
+          echo "env_name=prod" >> $GITHUB_ENV
+        else
+          echo "env_name=lab" >> $GITHUB_ENV
+        fi
+
+    - name: Output Environment
+      run: echo "Environment is $env_name"
 
     # Set Correct Kubernetes Context
     - name: Set Correct Kubernetes Context
       run: |
-        kubectl config use-context "${{ github.environment }}-kubernetes-admin@${{ github.environment }}-cluster.jjland.local"
+        kubectl config use-context "$env_name-kubernetes-admin@$env_name-cluster.jjland.local"
 
     # Install Argo CD
     - name: Install Argo CD on Kubernetes
