--- a/.github/workflows/install-argocd.yml
+++ b/.github/workflows/install-argocd.yml
@@ -39,10 +39,14 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
+    - name: Set Environment Name Variable Dynamically
+      id: set-environment-variable
+      run: echo "env_name=$needs.set-environment.outputs.ENV_NAME" >> $GITHUB_ENV
+
     # Set Correct Kubernetes Context
     - name: Set Correct Kubernetes Context
       run: |
-        kubectl config use-context "$env-kubernetes-admin@${{ env }}-cluster.jjland.local"
+        kubectl config use-context "$env_name-kubernetes-admin@${{ env_name }}-cluster.jjland.local"
 
     # Install Argo CD
     - name: Install Argo CD on Kubernetes
