--- a/.github/workflows/install-argocd.yml
+++ b/.github/workflows/install-argocd.yml
@@ -46,7 +46,7 @@ jobs:
     # Set Correct Kubernetes Context
     - name: Set Correct Kubernetes Context
       run: |
-        kubectl config use-context "${{ env_name }}-kubernetes-admin@${{ env_name }}-cluster.jjland.local"
+        kubectl config use-context "$env_name-kubernetes-admin@$env_name-cluster.jjland.local"
 
     # Install Argo CD
     - name: Install Argo CD on Kubernetes
