--- a/.github/workflows/install-argocd.yml
+++ b/.github/workflows/install-argocd.yml
@@ -41,12 +41,12 @@ jobs:
 
     - name: Set Environment Name Variable Dynamically
       id: set-environment-variable
-      run: echo "env_name=$needs.set-environment.outputs.ENV_NAME" >> $GITHUB_ENV
+      run: echo "env_name=${{ needs.set-environment.outputs.ENV_NAME }}" >> $GITHUB_ENV
 
     # Set Correct Kubernetes Context
     - name: Set Correct Kubernetes Context
       run: |
-        kubectl config use-context "$env_name-kubernetes-admin@$env_name-cluster.jjland.local"
+        kubectl config use-context "${env_name}-kubernetes-admin@${env_name}-cluster.jjland.local"
 
     # Install Argo CD
     - name: Install Argo CD on Kubernetes
