--- a/.github/workflows/install-argocd.yml
+++ b/.github/workflows/install-argocd.yml
@@ -46,7 +46,7 @@ jobs:
     # Set Correct Kubernetes Context
     - name: Set Correct Kubernetes Context
       run: |
-        echo "${{ vars.ARGOCD_PORT }}"
+        echo "${{ env.vars.ARGOCD_PORT }}"
         echo $env_name
         kubectl config use-context "${env_name}-kubernetes-admin@${env_name}-cluster.jjland.local"
 
