--- a/.github/workflows/install-argocd.yml
+++ b/.github/workflows/install-argocd.yml
@@ -17,7 +17,7 @@ on:
 
 env:
   TARGETED_CLUSTER: lab 
-  ENV_NAME: ${{ inputs.environment || 'test'}}
+  ENV_NAME: ${{ inputs.environment || 'lab'}}
 
 jobs:
   set-environment:
@@ -56,6 +56,7 @@ jobs:
     # Set Correct Kubernetes Context
     - name: Set Correct Kubernetes Context
       run: |
+        echo "${{ needs.set-environment.outputs.ENV_NAME }}"
         echo "${{ vars.ARGOCD_PORT }}"
         echo ${{ inputs.environment || 'lab'}}
         kubectl config use-context "$ENV_NAME-kubernetes-admin@${{ env.ENV_NAME }}-cluster.jjland.local"
